# five-head-chimera

./: .gitignore  Makefile  README.md  SPECIFICATION.md  db.env  docker-compose.yml  example.env  pyproject.toml  rabbitmq-client.env  rabbitmq.env
backend/: .dockerignore  Dockerfile  SPECIFICATION.md  requirements.txt
backend/service/: app.py
db/: Dockerfile  SPECIFICATION.md  create_tables.sql
dbwriter/: Dockerfile  SPECIFICATION.md  requirements.txt
dbwriter/service/: app.py  fapi.py
frontend/: Dockerfile  SPECIFICATION.md  nginx.conf
frontend/static/: index.html  script.js  style.css
rabbitmq/: Dockerfile  SPECIFICATION.md  cluster-entrypoint.sh
