[tool.poetry]
name = "five-head-chimera"
version = "0.1.0"
description = ""
authors = ["sentenzo <kassiyskley@rambler.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "five_head_chimera"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.backend.dependencies]
tornado = "^6.2"
pika = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.6"


[tool.poetry.group.dbwriter.dependencies]
pika = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 80
include_trailing_comma = true

[tool.black]
line-length = 80
target-version = ['py310']

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.format]
max-line-length = 80

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods (for sqlalchemy tables and pydantic classes)
  "C0115",  # missing-class-docstring (for api routes)
  "W0223",  # method is abstract in class but is not overridden (abstract-method)
]